exercise 1.13/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - name: frontend
      port: 2345
      protocol: TCP
      targetPort: 3000
