exercise 1.13/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
      traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-app-svc
          servicePort: 2345
